update menu tren dien thoai

--- a/Bai tap 2 JS(Menu)/1.html
+++ b/Bai tap 2 JS(Menu)/1.html
@@ -13,6 +13,43 @@
   <script src="1.js"></script>
 </head>
 <body>
+  <div class="top-header">
+    <div class="container">
+      <div class="row row-contact">
+        <div class="status">
+          <p class="name">S63</p>
+          <p class="money">S$3.760</p>
+          <p class="trade">0.020</p>
+        </div>
+        <div class="fontsize-control">
+          <a href="" class="decrease"></a>
+          <a href="" class="increase"></a>
+        </div>
+        <div class="contact">
+          <a href="">Contact Us</a>
+        </div>
+        <div class="social">
+          <a href=""><i class="fa fa-facebook"></i></a>
+          <a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+          <a href=""><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+          <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+        </div>
+      </div><!-- end row contact -->
+      <div class="row row-logo-menu">
+        <div class="logo">
+          <img src="images/logo.jpg" alt="">
+        </div>
+        <ul>
+          <li><a href="">About Us</a></li>
+          <li><a href="">Investor Relations</a></li>
+          <li><a href="">Sustainability</a></li>
+          <li><a href="">Innovation</a></li>
+          <li><a href="">Newsroom</a></li>
+          <li><a href="">Careers</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="menu">
     <div class="container">
       <div class="row">
