--- a/baitap bootstrap/index.html
+++ b/baitap bootstrap/index.html
@@ -128,7 +128,7 @@
                 <div class="row">
                     <div class="owl-carousel owl-theme" id="product">
                         <div class="product">
-                            <div class="col-lg-4 col-md-6 col-xs-12">
+                            <div class="product-item">
                                 <div class="img-product">
                                     <img src="Image/2503a10c_original.jpg" alt="" />
                                 </div>
@@ -159,7 +159,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-xs-12">
+                            <div class="product-item">
                                 <div class="img-product">
                                     <img src="Image/2503a10c_original.jpg" alt="" />
                                 </div>
@@ -190,7 +190,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-4 col-md-6 col-xs-12">
+                            <div class="product-item">
                                 <div class="img-product">
                                     <img src="Image/2503a10c_original.jpg" alt="" />
                                 </div>
