--- a/Solaniwa/solaniwa.html
+++ b/Solaniwa/solaniwa.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Solaniwa</title>
+    <title>SOLANIWA</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -100,7 +100,7 @@
                 </span>
             </a>
             <a href="#">
-                <p> <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-hotel-gray.svg?d=20190315t025432"
+                <p><img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-hotel-gray.svg?d=20190315t025432"
                         alt="" class="icon"></p>
                 <span>
                     <p>Hotel</p>
@@ -142,7 +142,86 @@
         crossorigin="anonymous"></script>
     <script>
 
+        var all_a = document.querySelectorAll(".nav a");
+        var img_after = ["https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-explore-white.svg?d=20190315t025427",
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-map-white.svg?d=20190315t025435",
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-faq-white.svg?d=20190315t025429",
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-hotel-white.svg?d=20190315t025434",
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-point-white.svg?d=20190315t025438",
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-call-white.svg?d=20190315t025426"];
+        var img_before = [
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-nav-01.svg?d=20190315t025445",
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-fees-gray.svg?d=20190315t025429",
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-faq-gray.svg?d=20190315t025428",
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-hotel-gray.svg?d=20190315t025432",
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-point-gray.svg?d=20190315t025437",
+            "https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-call-gray.svg?d=20190315t025425"];
 
+
+        var all_p = document.querySelectorAll(".nav a p img");
+        // for (var i = 0; i < all_a.length ; i++) {
+        //     all_a[i].addEventListener("mouseover", function () {
+        //         for (var j = 0; j < all_p.length ; j++) {
+        //         //      all_p[j].src = img_after[j];
+        //         console.log(img_after[0]);
+
+
+        //         }
+        //     })
+        //     all_a[i].addEventListener("mouseout", function () {
+
+        //         for (var j = 0; j < 6; j++) {
+        //             this.src = img_before[j];
+        //         }
+        //     })
+        // }
+
+
+        all_a[0].addEventListener("mouseover", function () {
+            all_p[0].src = img_after[0];
+        })
+        all_a[0].addEventListener("mouseout", function () {
+            all_p[0].src = img_before[0];
+        })
+
+        all_a[1].addEventListener("mouseover", function () {
+            all_p[1].src = img_after[1];
+        })
+        all_a[1].addEventListener("mouseout", function () {
+            all_p[1].src = img_before[1];
+        })
+
+
+        all_a[2].addEventListener("mouseover", function () {
+            all_p[2].src = img_after[2];
+        })
+        all_a[2].addEventListener("mouseout", function () {
+            all_p[2].src = img_before[2];
+        })
+
+
+        all_a[3].addEventListener("mouseover", function () {
+            all_p[3].src = img_after[3];
+        })
+        all_a[3].addEventListener("mouseout", function () {
+            all_p[3].src = img_before[3];
+        })
+
+
+        all_a[4].addEventListener("mouseover", function () {
+            all_p[4].src = img_after[4];
+        })
+        all_a[4].addEventListener("mouseout", function () {
+            all_p[4].src = img_before[4];
+        })
+
+
+        all_a[5].addEventListener("mouseover", function () {
+            all_p[5].src = img_after[5];
+        })
+        all_a[5].addEventListener("mouseout", function () {
+            all_p[5].src = img_before[5];
+        })
     </script>
 </body>
 
