--- a/BT_JS_Jquery/mega_menu.html
+++ b/BT_JS_Jquery/mega_menu.html
@@ -14,37 +14,79 @@
 </head>
 
 <body>
+    <header>
+        <div class="container">
+            <div class="contact">
+                <div class="contactus">
+                    <ul>
+                        <li>
+                            <span>S63</span>
+                            <span>S$3.750</span>
+                            <span>0.010</span>
+                        </li>
+                        <li class="li_contact">
+                            <span>A</span>
+                            <span>A</span>
+                        </li>
+                        <li class="li3">
+                            <a href="#">Contact Us</a>
+                        </li>
+                        <li>
+
+                            <a href="https://www.facebook.com/singaporetechnologiesengineeringltd"
+                                class="fa fa-facebook" target="_blank"></a>
+                            <a href="https://www.linkedin.com/company/st-engineering" class="fa fa-linkedin-square"
+                                target="_blank"></a>
+                            <a href="https://www.youtube.com/user/STEngineeringGroup" class="fa fa-youtube-play"
+                                target="_blank"></a>
+                            <a href="https://www.instagram.com/st_engineering/" class="fa fa-instagram"
+                                target="_blank"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bottom">
+                <div class="logo"> <img src="https://www.stengg.com/media/1070/logo.jpg" alt=""></div>
+                <div class="bottom_nav">
+                    <ul>
+                        <li><a href="#">ABOUT US</a></li>
+                        <li><a href="#">INVESTOR RELATIONS</a></li>
+                        <li><a href="#">SUSTAINABILITY</a></li>
+                        <li><a href="#">INNOVATION</a></li>
+                        <li><a href="#">NEWSROOM</a></li>
+                        <li><a href="#">CAREERS</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+
     <div class="mega-menu">
         <div class="container">
-            <div class="search">
-                <i class="fas fa-search"></i>
-            </div>
             <div class="drop1">
                 <a href="#">AEROSPACE</a>
                 <div class="drop2">
                     <div class="left">
                         <ul>
-                            <li><a href="#">Capabilities</a></li>
+                            <li class="active"><a href="#">Capabilities</a>
+                                <div class="right">
+                                    <ul class="ul_lv3">
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Pilot Training</a></li>
+                                        <li><a href="#">Smart MRO</a></li>
+                                    </ul>
+                                    <ul class="ul_lv3">
+                                        <li><a href="#">Freighter Conversions</a></li>
+                                        <li><a href="#"> Unmanned Aerial Solutions</a></li>
+                                        <li><a href="#">Pilot Training</a></li>
+                                    </ul>
+                                </div>
+                            </li>
                             <li><a href="#">Companies & Affiliates</a></li>
                             <li><a href="#">Newsroom</a></li>
                             <li><a href="#">Contact Us</a></li>
-                        </ul>
-                    </div>
-                    <div class="right">
-                        <ul class="ul_lv3">
-                            <li>
-                                <a href="#">Commercial MRO</a>
-                                <a href="#">Commercial MRO</a>
-                                <a href="#">Pilot Training</a>
-                                <a href="#">Smart MRO</a>
-                            </li>
-                        </ul>
-                        <ul class="ul_lv3">
-                            <li>
-                                <a href="#">Unmanned Aerial Solutions</a>
-                                <a href="#">Freighter Conversions</a>
-                                <a href="#">Unmanned Aerial Solutions</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -55,16 +97,32 @@
                 <div class="drop2">
                     <div class="left">
                         <ul>
-                            <li><a href="#">Capabilities</a></li>
+                            <li>
+                                <a href="#">Capabilities</a>
+                                <div class="right">
+                                    <ul class="ul_lv3">
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Pilot Training</a></li>
+                                        <li><a href="#">Smart MRO</a></li>
+                                    </ul>
+                                    <ul class="ul_lv3">
+                                        <li><a href="#">Freighter Conversions</a></li>
+                                        <li><a href="#"> Unmanned Aerial Solutions</a></li>
+                                        <li><a href="#">Pilot Training</a></li>
+                                    </ul>
+                                </div>
+                            </li>
                             <li><a href="#">Companies & Affiliates</a></li>
                             <li><a href="#">Newsroom</a></li>
                             <li><a href="#">Contact Us</a></li>
                             <li><a href="#">RFQs and Tender Listings</a></li>
                         </ul>
                     </div>
-                    <div class="right">Phong</div>
                 </div>
             </div>
+
 
 
             <div class="drop1">
@@ -72,27 +130,20 @@
                 <div class="drop2">
                     <div class="left">
                         <ul class="ul_lv2">
-                            <li><a href="#">Capabilities</a></li>
+                            <li><a href="#">Capabilities</a>
+                                <div class="right">
+                                    <ul class="ul_lv3">
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Pilot Training</a></li>
+                                        <li><a href="#">Smart MRO</a></li>
+                                    </ul>
+                                </div>
+                            </li>
                             <li><a href="#">Companies & Affiliates</a></li>
                             <li><a href="#">Newsroom</a></li>
                             <li><a href="#">Contact Us</a></li>
-                        </ul>
-                    </div>
-                    <div class="right">
-                        <ul class="ul_lv3">
-                            <li>
-                                <a href="#">Commercial MRO</a>
-                                <a href="#">Commercial MRO</a>
-                                <a href="#">Pilot Training</a>
-                                <a href="#">Smart MRO</a>
-                            </li>
-                        </ul>
-                        <ul class="ul_lv3">
-                            <li>
-                                <a href="#">Unmanned Aerial Solutions</a>
-                                <a href="#">Freighter Conversions</a>
-                                <a href="#">Unmanned Aerial Solutions</a>
-                            </li>
                         </ul>
                     </div>
                 </div>
@@ -102,14 +153,26 @@
                 <div class="drop2">
                     <div class="left">
                         <ul>
-                            <li><a href="#">Capabilities</a></li>
+                            <li><a href="#">Capabilities</a>
+                                <div class="right">
+                                    <ul class="ul_lv3">
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Pilot Training</a></li>
+                                        <li><a href="#">Smart MRO</a></li>
+                                    </ul>
+                                </div>
+                            </li>
                             <li><a href="#">Companies & Affiliates</a></li>
                             <li><a href="#">Newsroom</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
-                    <div class="right">Phong</div>
                 </div>
+            </div>
+            <div class="search">
+                <i class="fas fa-search"></i>
             </div>
         </div>
     </div>
@@ -121,23 +184,16 @@
         });
     </script> -->
     <script>
-        var navs = document.querySelectorAll(".menu ul li");
-        for (var i = 0; i < navs.length; i++) {
-            navs[i].onclick = function () {
-                var mega = this.getElementsByClassName('drop_2')[0];
-                var submenu = document.querySelectorAll(".menu .drop_2");
-                for (var j = 0; j < submenu; j++) {
-                    if (submenu[j].style.display == 'block' && mega != submenu[j]) {
-                        submenu[j].style.display = 'none';
-                    }
-                }
-                if (mega.style.display == 'block') {
-                    mega.style.display = 'none';
-                } else {
-                    mega.style.display = 'block';
-                }
-            }
+        var li = document.querySelectorAll(".drop2 .left ul li");
+        for (i = 0; i < li.length; i++) {
+            li[i].addEventListener("mouseout", function () {
+                this.setAttribute('class', '');
+            })
+            li[i].addEventListener("mouseover", function () {
+                this.setAttribute('class', 'active');
+            })
         }
+
     </script>
 </body>
 
