--- a/Mega Menu/mega_menu.html
+++ b/Mega Menu/mega_menu.html
@@ -84,7 +84,22 @@
                                     </ul>
                                 </div>
                             </li>
-                            <li><a href="#">Companies & Affiliates</a></li>
+                            <li><a href="#">Companies & Affiliates</a>
+                                <div class="right">
+                                    <ul class="ul_lv3">
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Commercial MRO</a></li>
+                                        <li><a href="#">Pilot Training</a></li>
+                                        <li><a href="#">Smart MRO</a></li>
+                                    </ul>
+                                    <ul class="ul_lv3">
+                                        <li><a href="#">Freighter Conversions</a></li>
+                                        <li><a href="#"> Unmanned Aerial Solutions</a></li>
+                                        <li><a href="#">Pilot Training</a></li>
+                                    </ul>
+                                </div>
+                            </li>
                             <li><a href="#">Newsroom</a></li>
                             <li><a href="#">Contact Us</a></li>
                         </ul>
