--- a/solaniwa.html
+++ b/solaniwa.html
@@ -5,6 +5,7 @@
 	<title>Header</title>
 	<link rel="stylesheet" type="text/css" href="css/solaniwa.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/daneden/animate.css/master/animate.css">
 </head>
 <body>
 	<div id="header">
@@ -55,6 +56,7 @@
 	</div>
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdn.rawgit.com/renatorib/janimate/master/dist/janimate.min.js"></script>
 	<script type="text/javascript" src="js/solaniwa.js"></script>
 </body>
 </html>
