--- a/Mega Menu/mega_menu.html
+++ b/Mega Menu/mega_menu.html
@@ -68,7 +68,7 @@
                 <div class="drop2">
                     <div class="left">
                         <ul>
-                            <li class="active"><a href="#">Capabilities</a>
+                            <li><a href="#">Capabilities</a>
                                 <div class="right">
                                     <ul class="ul_lv3">
                                         <li><a href="#">Commercial MRO</a></li>
