update code vr2

--- a/solaniwa.html
+++ b/solaniwa.html
@@ -28,6 +28,45 @@
                 </div>
             </div>
         </header>
+        <nav class="nav">
+            <a href="item-nav">
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-explore-gray.svg?d=20190315t025426" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-explore-red.svg?d=20190315t025427" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-explore-white.svg?d=20190315t025427" alt=""/>
+            <img src="" alt=""/>
+            <span class="pc-span">Explore</span>
+            </a>
+            <a href="#">
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-fees-gray.svg?d=20190315t025429" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-fees-red.svg?d=20190315t025430" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-map-white.svg?d=20190315t025435" alt=""/>
+            <span class="pc-span">Open・Fee</span>
+            </a>
+            <a href="#">
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-faq-gray.svg?d=20190315t025428" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-faq-red.svg?d=20190315t025428" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-faq-white.svg?d=20190315t025429" alt=""/>
+            <span class="pc-span">FAQ</span>
+            </a>
+            <a href="#">
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-hotel-gray.svg?d=20190315t025432" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-hotel-red.svg?d=20190315t025433" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-hotel-white.svg?d=20190315t025434" alt=""/>
+            <span class="pc-span">Hotel</span>
+            </a>
+            <a href="#">
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-point-gray.svg?d=20190315t025437" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-point-red.svg?d=20190315t025437" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-point-white.svg?d=20190315t025438" alt=""/>
+            <span class="pc-span">Access</span>
+            </a>
+            <a href="#">
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-call-gray.svg?d=20190315t025425" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-call-red.svg?d=20190315t025425" alt=""/>
+            <img src="https://d26s194ubor3a7.cloudfront.net/-/media/solaniwa/cmn/icn-fnav-call-white.svg?d=20190315t025426" alt=""/>
+            <span class="pc-span">06-7670-5126</span>
+            </a>
+        </nav>
     </div>
 </body>
 </html>
