--- a/indexStengg.html
+++ b/indexStengg.html
@@ -16,52 +16,50 @@
 <body>
     <div class="wrapper">
         <header id="header">
-           <!--  <div class="content-header"> -->
-                <div class="container">
-                    <div class="header-top">
-                        <div class="shareprice">
-                            <span class="s-name">$63</span>
-                            <span class="s-money">S$3.770</span>
-                            <span class="s-trade"><i class="fa fa-caret-down icon-trade" aria-hidden="true"></i>0.030</span>
-                        </div>
-                        <div class="fontsize-control">
-                            <span class="font-small">
-                                <a href="#">A-</a>
-                            </span>
-                            <span class="font-big">
-                                <a href="#">A+</a>
-                            </span>
-                        </div>
-                        <div class="contact">
-                            <span class="content-contact"><a href="#">contact us</a></span>
-                        </div>
-                        <div class="socical-network">
-                            <ul class="socicalNetwork">
-                                <li class="item-socicalNetwork"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                <li class="item-socicalNetwork"><a href="#"><i class="fab fa-invision"></i></a></li>
-                                <li class="item-socicalNetwork"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-                                <li class="item-socicalNetwork"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></li>
-                            </ul>
-                        </div>
+            <div class="container">
+                <div class="header-top">
+                    <div class="shareprice">
+                        <span class="s-name">$63</span>
+                        <span class="s-money">S$3.770</span>
+                        <span class="s-trade"><i class="fa fa-caret-down icon-trade" aria-hidden="true"></i>0.030</span>
                     </div>
-                    <div class="header-center">
-                        <div class="logoEnineering">
-                            <a href="#" class=""><img src="img/logoEngineering.jpg" class="logo"alt="logo"/></a>
-                        </div>
-                        <div class="menu">
-                            <ul class="list-menu">
-                                <li class="item-menu"><a href="#">about us</a></li>
-                                <li class="item-menu"><a href="#">investor relations</a></li>
-                                <li class="item-menu"><a href="#">sustainability</a></li>
-                                <li class="item-menu"><a href="#">innivation</a></li>
-                                <li class="item-menu"><a href="#">newsroom</a></li>
-                                <li class="item-menu"><a href="#">careers</a></li>
-                                <li class="item-menu"><a href="#"></a></li>
-                            </ul>
-                        </div>
+                    <div class="fontsize-control">
+                        <span class="font-small">
+                            <a href="#">A-</a>
+                        </span>
+                        <span class="font-big">
+                            <a href="#">A+</a>
+                        </span>
+                    </div>
+                    <div class="contact">
+                        <span class="content-contact"><a href="#">contact us</a></span>
+                    </div>
+                    <div class="socical-network">
+                        <ul class="socicalNetwork">
+                            <li class="item-socicalNetwork"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li class="item-socicalNetwork"><a href="#"><i class="fab fa-invision"></i></a></li>
+                            <li class="item-socicalNetwork"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+                            <li class="item-socicalNetwork"><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></li>
+                        </ul>
                     </div>
                 </div>
-           <!--  </div> -->
+                <div class="header-center">
+                    <div class="logoEnineering">
+                        <a href="#" class=""><img src="img/logoEngineering.jpg" class="logo"alt="logo"/></a>
+                    </div>
+                    <div class="menu">
+                        <ul class="list-menu">
+                            <li class="item-menu"><a href="#">about us</a></li>
+                            <li class="item-menu"><a href="#">investor relations</a></li>
+                            <li class="item-menu"><a href="#">sustainability</a></li>
+                            <li class="item-menu"><a href="#">innivation</a></li>
+                            <li class="item-menu"><a href="#">newsroom</a></li>
+                            <li class="item-menu"><a href="#">careers</a></li>
+                            <li class="item-menu"><a href="#"></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <nav class="nav">
                 <div class="container">
                     <div class="navigration">
@@ -81,15 +79,95 @@
                                                     <li class="item-lv2"><a href="#">Unmanned Aerial Solutions</a></li>
                                                 </ul>
                                             </li>
-                                            <li class="item-nav-lv2"><a href="#">Companies & Affiliates</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></li>
+                                            <li class="item-nav-lv2"><a href="#">Companies & Affiliates</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i>
+                                            </li>
                                             <li class="item-nav-lv2"><a href="#">Newsroom</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></li>
                                             <li class="item-nav-lv2"><a href="#">Contact Us</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></li>
                                         </ul>
                                     </div>
                                 </li>
-                                <li class="item-nav-lv1"><a href="#" class="link-nav-a">electronics<i class="fa fa-angle-down icon-nav" aria-hidden="true"></i></a></li>
-                                <li class="item-nav-lv1"><a href="#" class="link-nav-a">land systems<i class="fa fa-angle-down icon-nav" aria-hidden="true"></i></a></li>
-                                <li class="item-nav-lv1" class="link-nav-a"><a href="#">marine<i class="fa fa-angle-down icon-nav" aria-hidden="true"></i></a></li>
+                                <li class="item-nav-lv1"><a href="#" class="link-nav-a">electronics<i class="fa fa-angle-down icon-nav" aria-hidden="true"></i></a>
+                                    <div class="content-list-nav-lv2">
+                                        <ul class="list-nav-lv2">
+                                            <li class="item-nav-lv2 active"><a href="#">Capabilities<i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></a>
+                                                <ul class="group-item-nav-lv2">
+                                                    <li class="item-lv2"><a href="#">Aircraft Maintenance & Modification</a></li>
+                                                    <li class="item-lv2"><a href="#">Component Total Support</a></li>
+                                                    <li class="item-lv2"><a href="#">Engine Total Support</a></li>
+                                                    <li class="item-lv2"><a href="#">Aviation & Training Services</a></li>
+                                                    <li class="item-lv2"><a href="#">Aerospace Engineering & Manufacturing</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="item-nav-lv2"><a href="#">Companies & Affiliates</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i>
+                                                <ul class="group-item-nav-lv2">
+                                                    <li class="item-lv2"><a href="#">Advanced Electronics and Infocomm Technologies</a></li>
+                                                    <li class="item-lv2"><a href="#">Modelling, Simulation and Edutainment</a></li>
+                                                    <li class="item-lv2"><a href="#">Satellite Communications and Remote Sensing Satellites</a></li>
+                                                    <li class="item-lv2"><a href="#">Cybersecurity</a></li>
+                                                    <li class="item-lv2"><a href="#">Intelligent Transportation and Telematics</a></li>
+                                                    <li class="item-lv2"><a href="#">Sensors and Electro-Optics</a></li>
+                                                    <li class="item-lv2"><a href="#">Defence and Homeland Security</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="item-nav-lv2"><a href="#">Newsroom</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i>
+                                                <ul class="group-item-nav-lv2">
+                                                    <li class="item-lv2"><a href="#">Advanced Electronics and Infocomm Technologies</a></li>
+                                                    <li class="item-lv2"><a href="#">Modelling, Simulation and Edutainment</a></li>
+                                                    <li class="item-lv2"><a href="#">Satellite Communications and Remote Sensing Satellites</a></li>
+                                                    <li class="item-lv2"><a href="#">Cybersecurity</a></li>
+                                                    <li class="item-lv2"><a href="#">Intelligent Transportation and Telematics</a></li>
+                                                    <li class="item-lv2"><a href="#">Sensors and Electro-Optics</a></li>
+                                                    <li class="item-lv2"><a href="#">Defence and Homeland Security</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="item-nav-lv2"><a href="#">Contact Us</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="item-nav-lv1"><a href="#" class="link-nav-a">land systems<i class="fa fa-angle-down icon-nav" aria-hidden="true"></i></a>
+                                    <div class="content-list-nav-lv2">
+                                        <ul class="list-nav-lv2">
+                                            <li class="item-nav-lv2 active"><a href="#">Capabilities<i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></a>
+                                                <ul class="group-item-nav-lv2">
+                                                    <li class="item-lv2"><a href="#">Mobility Solutions for Defence and Security</a></li>
+                                                    <li class="item-lv2"><a href="#">Weapons and Ammunition</a></li>
+                                                    <li class="item-lv2"><a href="#">Soldier Systems</a></li>
+                                                    <li class="item-lv2"><a href="#">Specialty Vehicles and Automotive Services</a></li>
+                                                    <li class="item-lv2"><a href="#">Robotics and Autonomous Systems</a></li>
+                                                    <li class="item-lv2"><a href="#">Testing and Inspection</a></li>
+                                                    <li class="item-lv2"><a href="#">MRO</a></li>
+                                                    <li class="item-lv2"><a href="#">Training</a></li>
+                                                    <li class="item-lv2"><a href="#">Engineering Design & Manufacturing</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="item-nav-lv2"><a href="#">Companies & Affiliates</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i>
+                                            </li>
+                                            <li class="item-nav-lv2"><a href="#">Newsroom</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></li>
+                                            <li class="item-nav-lv2"><a href="#">Contact Us</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="item-nav-lv1"><a href="#"  class="link-nav-a">marine<i class="fa fa-angle-down icon-nav" aria-hidden="true"></i></a>
+                                    <div class="content-list-nav-lv2">
+                                        <ul class="list-nav-lv2">
+                                            <li class="item-nav-lv2 active"><a href="#">Capabilities<i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></a>
+                                                <ul class="group-item-nav-lv2">
+                                                    <li class="item-lv2"><a href="#">Commercial MRO</a></li>
+                                                    <li class="item-lv2"><a href="#">Aircraft Interiors</a></li>
+                                                    <li class="item-lv2"><a href="#">Pilot Training</a></li>
+                                                    <li class="item-lv2"><a href="#">Smart MRO</a></li>
+                                                    <li class="item-lv2"><a href="#">Military MRO</a></li>
+                                                    <li class="item-lv2"><a href="#">Freighter Conversions</a></li>
+                                                    <li class="item-lv2"><a href="#">Unmanned Aerial Solutions</a></li>
+                                                </ul>
+                                            </li>
+                                            <li class="item-nav-lv2"><a href="#">Companies & Affiliates</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i>
+                                            </li>
+                                            <li class="item-nav-lv2"><a href="#">Newsroom</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></li>
+                                            <li class="item-nav-lv2"><a href="#">Contact Us</a><i class="fa fa-angle-right icon-navc2" aria-hidden="true"></i></li>
+                                        </ul>
+                                    </div>
+                                </li>
                             </ul>
                         </div>
                         <div class="search">
